2006-07-25 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel.desktop.in: Add Comment field
	* configure.ac: 2.2.1

2006-07-25 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.c: Added D-Bus RPC handler to query
	  if an applet is running

2006-07-25 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.c: Restart the proper applet after coming
	  back from bg-killing (Closes NB#35677)

2006-07-14 Johan Bilien <johan.bilien@nokia.com>

	* hildon-cp-applist.c: Use g_key_file_get_locale_string to fetch the
	  name from the desktop file to allow "in .desktop" l10n

2006-07-14 Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.2.0

2006-07-14 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.c: Always load the UI interface for now

2006-07-12 Johan Bilien <johan.bilien@nokia.com>

	* hildon-cp-item.[ch]: 
	  - load amd run plugins inside an idle loop
	     so we can keep receiving DBus messages
	  - load plugins without RTLD_GLOBAL, because we are likely to
	    load 2 plugins at the same time, and they all use the same
	    shared symbol names ...
	* hildon-control-panel-main.[ch]:
	  - Added RPC handler, with run_application method to launch
	    applets remotely (Closes NB#25238 partially)

2006-07-11 Johan Bilien <johan.bilien@nokia.com>

	Major refactoring:
	* hildon-cp-item.[ch]: Added to represent a CP item (.desktop)
	* hildon-cp-view.[ch]: Added to represent grid container widget
	* hildon-control-panel-main.[ch], hildon-cp-applist.[ch]:
	  - replaced global variables with objectified code
	  - use gconf to store settings instead of configuration file
	  - use osso_state_read/write and g_key_file_ to save state
	  - replaced libmb with g_key_file_ for .desktop parsing
	  - do not use osso_cp_plugin_ but implement loading of plugin
	    from the application

2006-07-07 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.c: Fixed height of the items in small icon
	  mode